Small config changes

--- a/blog/config.yaml
+++ b/blog/config.yaml
@@ -1,8 +1,8 @@
-baseurl: https://example.com
-languageCode: en-us
+baseurl: https://mattdaines.github.io
+languageCode: en-gb
 theme: hugo-theme-stack
 paginate: 5
-title: Example Site
+title: Matt Daines
 
 # Change it to your Disqus shortname before using
 disqusShortname: hugo-theme-stack
@@ -35,7 +35,7 @@ params:
 
     sidebar:
         emoji: 🍥
-        subtitle: Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+        subtitle: An Azure engineer's scrapbook.
         avatar:
             local: true
             src: img/avatar.png
@@ -47,7 +47,7 @@ params:
             default: Licensed under CC BY-NC-SA 4.0
 
     comments:
-        enabled: true
+        enabled: false
         provider: disqus
 
         utterances:
