--- a/config.yaml
+++ b/config.yaml
@@ -47,7 +47,7 @@ params:
             default: Licensed under CC BY-NC-SA 4.0
 
     comments:
-        enabled: false
+        enabled: true
         provider: disqus
 
         utterances:
