Enabled Twitter Open Graph

--- a/config.yaml
+++ b/config.yaml
@@ -74,17 +74,14 @@ params:
 
     opengraph:
         twitter:
-            # Your Twitter username
-            site:
-
-            # Available values: summary, summary_large_image
+            site: MatthewDaines1
             card: summary_large_image
 
     defaultImage:
         opengraph:
-            enabled: false
-            local: false
-            src:
+            enabled: true
+            local: true
+            src: img/avatar.jpeg
 
     colorScheme:
         # Display toggle
