--- a/config.yaml
+++ b/config.yaml
@@ -1,6 +1,6 @@
 # hugo server --minify --themesDir ... --baseURL=http://0.0.0.0:1313/theme/hugo-book/
 
-baseURL: https://notebook.mattdaines.me/
+baseURL: 'https://notebook.mattdaines.me/'
 languageCode: 'en-gb'
 title: 'A Technologists Notebook'
 theme: hugo-book
@@ -8,6 +8,10 @@ theme: hugo-book
 # Book configuration
 disablePathToLower: true
 enableGitInfo: true
+
+# (Optional) If you provide a Disqus shortname, comments will be enabled on
+# all pages.
+disqusShortname: 'mattdaines'
 
 # Needed for mermaid/katex shortcodes
 markup:
