Removed Disqus; as it doesn't appear you can style the background colour

--- a/config.yaml
+++ b/config.yaml
@@ -11,7 +11,7 @@ enableGitInfo: true
 
 # (Optional) If you provide a Disqus shortname, comments will be enabled on
 # all pages.
-disqusShortname: 'mattdaines'
+#disqusShortname: 'mattdaines'
 
 # Needed for mermaid/katex shortcodes
 markup:
