--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -25,7 +25,7 @@ jobs:
           extended: true
 
       - name: Build
-        run: hugo --minify --theme hugo-book
+        run: hugo --minify --theme hugo-theme-stack
 
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v3
